--- a/package.json
+++ b/package.json
@@ -16,6 +16,9 @@
     "evergreen-ui": "^6.13.1",
     "graphql": "^16.6.0",
     "isbot": "^3.6.5",
+    "mobx": "^6.7.0",
+    "mobx-react": "^7.6.0",
+    "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^9.1.1",
