--- a/package.json
+++ b/package.json
@@ -9,11 +9,16 @@
   },
   "dependencies": {
     "@apollo/client": "^3.7.1",
+    "@draft-js-plugins/static-toolbar": "^4.1.3",
     "@remix-run/node": "^1.7.6",
     "@remix-run/react": "^1.7.6",
     "@remix-run/serve": "^1.7.6",
+    "axios": "^1.2.0",
     "crypto-js": "^4.1.1",
     "evergreen-ui": "^6.13.1",
+    "filepond-plugin-image-exif-orientation": "^1.0.11",
+    "filepond-plugin-image-preview": "^4.6.11",
+    "framer-motion": "^7.6.17",
     "graphql": "^16.6.0",
     "isbot": "^3.6.5",
     "mobx": "^6.7.0",
@@ -21,7 +26,9 @@
     "mobx-react-lite": "^3.4.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-filepond": "^7.1.2",
     "react-toastify": "^9.1.1",
+    "react-top-loading-bar": "^2.3.1",
     "tslib": "^2.4.1"
   },
   "devDependencies": {
