--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@remix-run/serve": "^1.7.6",
     "axios": "^1.2.0",
     "crypto-js": "^4.1.1",
+    "dotenv": "^16.0.3",
     "evergreen-ui": "^6.13.1",
     "filepond-plugin-image-exif-orientation": "^1.0.11",
     "filepond-plugin-image-preview": "^4.6.11",
@@ -27,6 +28,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-filepond": "^7.1.2",
+    "react-select": "^5.7.0",
+    "react-simple-oauth2-login": "^0.5.4",
     "react-toastify": "^9.1.1",
     "react-top-loading-bar": "^2.3.1",
     "tslib": "^2.4.1"
