--- a/package.json
+++ b/package.json
@@ -31,8 +31,7 @@
     "react-select": "^5.7.0",
     "react-simple-oauth2-login": "^0.5.4",
     "react-toastify": "^9.1.1",
-    "react-top-loading-bar": "^2.3.1",
-    "tslib": "^2.4.1"
+    "react-top-loading-bar": "^2.3.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.6",
