--- a/package.json
+++ b/package.json
@@ -29,8 +29,10 @@
     "react-filepond": "^7.1.2",
     "react-select": "^5.7.0",
     "react-simple-oauth2-login": "^0.5.4",
+    "react-slick": "^0.29.0",
     "react-toastify": "^9.1.1",
-    "react-top-loading-bar": "^2.3.1"
+    "react-top-loading-bar": "^2.3.1",
+    "slick-carousel": "^1.8.1"
   },
   "devDependencies": {
     "@remix-run/dev": "^1.7.6",
